included tests to redux and started tests on components

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "node-fetch": "^2.6.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
@@ -16,6 +17,7 @@
     "react-multi-carousel": "^2.5.5",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
+    "react-test-renderer": "^16.13.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
@@ -23,9 +25,14 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --config ./jest.config.json",
+    "test:watch": "npm test -- --watch",
     "eject": "react-scripts eject"
   },
+  "setupFiles": [
+    "<rootDir>/config/polyfills.js",
+    "<rootDir>/src/setupTests.js"
+  ],
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -42,7 +49,13 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "enzyme": "^3.0.0",
+    "enzyme-adapter-react-16": "^1.0.2",
+    "@types/enzyme": "^3.1.0",
     "eslint": "^6.8.0",
-    "prettier": "^2.0.5"
+    "fetch-mock": "^9.4.0",
+    "prettier": "^2.0.5",
+    "redux-mock-store": "^1.5.4"
   }
 }
