--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
-    "node-fetch": "^2.6.0",
-    "node-sass": "^4.13.1",
-    "react": "^16.13.0",
-    "react-bootstrap": "^1.0.0-beta.17",
-    "react-dom": "^16.13.0",
-    "react-geolocated": "^3.0.1",
-    "react-multi-carousel": "^2.5.5",
-    "react-redux": "^7.2.0",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "node-fetch": "^2.6.1",
+    "node-sass": "^4.14.1",
+    "react": "^16.14.0",
+    "react-bootstrap": "^1.5.2",
+    "react-dom": "^16.14.0",
+    "react-geolocated": "^3.2.0",
+    "react-multi-carousel": "^2.6.2",
+    "react-redux": "^7.2.4",
     "react-scripts": "3.4.0",
-    "react-test-renderer": "^16.13.1",
-    "redux": "^4.0.5",
+    "react-test-renderer": "^16.14.0",
+    "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   },
@@ -49,13 +49,13 @@
     ]
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.8",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "enzyme": "^3.0.0",
-    "enzyme-adapter-react-16": "^1.0.2",
-    "@types/enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^6.8.0",
-    "fetch-mock": "^9.4.0",
-    "prettier": "^2.0.5",
+    "fetch-mock": "^9.11.0",
+    "prettier": "^2.2.1",
     "redux-mock-store": "^1.5.4"
   }
 }
